# allstat

./: .gitignore  .gitmodules  AllStat.sln  CMakeLists.txt  CMakeSettings.json  SolutionDefines.targets  readme.md
AllStat/: CMakeLists.txt  allstat.vcxproj  allstat.vcxproj.filters
AllStat.xcodeproj/: project.pbxproj
AllStat.xcodeproj/xcuserdata/predator.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
AllStat/AllStat.xcodeproj/: project.pbxproj
AllStat/include/AllStat/: AllStat.h  Types.h  bug_check_codes.h  errno.h  hresult.h  http.h  ipp_status.h  kernel_return.h  lresult.h  ntstatus.h
AllStat/source/: AllStat.cpp  AllStatDefs.h  BugCheck.cpp  Description.cpp  Errno.cpp  Generator.cpp  Generator.h  GrabInfo.cpp  Hresult.cpp  Http.cpp  IppStatus.cpp  Kreturn.cpp  LinkAll.cpp  NtStatus.cpp  Winerror.cpp
Dll/AllStatDll/: AllStatDll.vcxproj  AllStatDll.vcxproj.filters  CMakeLists.txt
Dll/AllStatDll/AllStatDll.xcodeproj/: project.pbxproj
Examples/: CMakeLists.txt
Examples/BestPractices/BpWin/: BpWin.cpp  BpWin.vcxproj  BpWin.vcxproj.filters  CMakeLists.txt
Examples/ErrorLookup/: CMakeLists.txt  Code2Name.cpp  Code2Name.h  ErrorLookup.aps  ErrorLookup.cpp  ErrorLookup.h  ErrorLookup.rc  ErrorLookup.vcxproj  ErrorLookup.vcxproj.filters  ErrorLookupDlg.cpp  ErrorLookupDlg.h  Framework.h  Name2Code.cpp  Name2Code.h  Precompile.cpp  Precompile.h  resource.h
Examples/Go/: run.sh  test.go
Examples/Go/allstat/: allstat.go
Examples/PureC/: CMakeLists.txt  PureC.c  PureC.vcxproj  PureC.vcxproj.filters
Examples/PureC/PureC.xcodeproj/: project.pbxproj
Examples/Python/: allstat.py  example.py
Examples/WhatIs/: CMakeLists.txt  Config.cpp  Config.h  WhatIs.cpp  WhatIs.vcxproj  WhatIs.vcxproj.filters
Examples/WhatIs/WhatIs.xcodeproj/: project.pbxproj
Examples/WhatIs/WhatIs.xcodeproj/xcshareddata/xcschemes/: WhatIs.xcscheme
Examples/WhatIs/WhatIs.xcodeproj/xcuserdata/predator.xcuserdatad/xcschemes/: xcschememanagement.plist
Examples/asinfo/: CMakeLists.txt  asinfo.cpp  asinfo.vcxproj  asinfo.vcxproj.filters
Lib/zlib/: zlib.vcxproj  zlib.vcxproj.filters
Lib/zlib/zlib.xcodeproj/: project.pbxproj
Scripts/: allstat.py  config.xml  gen_all.py  gen_bugcheck.py  gen_errno.py  gen_hresult.py  gen_http.py  gen_ipp_status.py  gen_kreturn.py  gen_lresult.py  gen_ntstatus.py  settings.py
Scripts/data/: ippdefs.h  ntstatus.h
Scripts/data/bugcodes/: bugcodes-old.h  bugcodes.h
Scripts/data/errno/Linux/: errno.h
Scripts/data/errno/Mac/: errno.h
Scripts/data/errno/Solaris/: errno.h
Scripts/data/kreturn/: IOReturn.h
Scripts/data/mssdk/shared/: bugcodes.h  winerror.h
Scripts/data/mssdk/um/: wuerror.h
Tests/: CMakeLists.txt
Tests/TestAll/: CMakeLists.txt  TestAll.cpp  TestAll.vcproj  TestAll.vcxproj  TestAll.vcxproj.filters
Tests/TestAll/TestAll.xcodeproj/: project.pbxproj
Tests/WhatIs/: Config.cpp  Precompile.h  WhatIs.cpp  WhatIs.vcxproj  WhatIs.vcxproj.filters
Tests/WhatIs/WhatIs.xcodeproj/: project.pbxproj
Tests/WhatIs/WhatIs.xcodeproj/xcshareddata/xcschemes/: WhatIs.xcscheme
cmake/: Findallstat.cmake
